# needle

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  conv_transpose.py  download_dataset.py  requirements.txt
apps/: models.py  simple_training.py  vae.py  vae_with_deconv.py
python/needle/: autograd.py  data.py  init.py  nn.py  ops.py  optim.py
python/needle/backend_ndarray/: ndarray.py  ndarray_backend_numpy.py
src/: ndarray_backend_cpu.cc  ndarray_backend_cuda.cu
tests/: test_cifar_ptb_data.py  test_nd_backend.py  test_vae.py
